--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,13 @@
 {
-"functions": {
+  "functions": {
     "api/*.php": {
-      "runtime": "vercel-php@0.5.0"
+      "runtime": "vercel-php@0.7.3"
     }
   },
   "rewrites": [
     {
       "source": "/(.*)",
-      "destination": "/public/$1"
+      "destination": "/api/$1"
+    }
+  ]
 }
-]
-}   
